--- a/CBT-mental-health-ai-main/conversant/personas/therapist/config.json
+++ b/CBT-mental-health-ai-main/conversant/personas/therapist/config.json
@@ -51,7 +51,7 @@
                 },
                 {
                     "user": "The benefits of negative thoughts or feelings are ...",
-                    "bot": "Good job! Now, try to substitute a more positive and realistic thought for the negative one. Ask yourself - Is this negative thought really true? Do I really believe it? Is there another way to look at the situation?"
+                    "bot": "Now, try to substitute a more positive and realistic thought for the negative one. Ask yourself - Is this negative thought really true? Do I really believe it? Is there another way to look at the situation?"
                 },
                 {
                     "user": "The realistic thought is ...",
